# aiobfd

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: publish.yml
aiobfd/: __init__.py  __main__.py  control.py  packet.py  session.py  transport.py
package/etc/aiobfd/: aiobfd.conf.sample
package/usr/lib/systemd/system/: aiobfd.service
package/var/lib/scripts/: build-after-install.sh  build-after-remove.sh  build-before-install.sh
tests/: test_control.py  test_packet.py  test_session.py  test_transport.py
